WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105209
[WK2 NetworkProcess] NetworkProcess should not exit after downloading
https://bugs.webkit.org/show_bug.cgi?id=105209
Summary
[WK2 NetworkProcess] NetworkProcess should not exit after downloading
Alexey Proskuryakov
Reported
2012-12-17 13:17:25 PST
<
rdar://problem/12895354
>
Attachments
proposed fix
(1.42 KB, patch)
2012-12-17 13:21 PST
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-12-17 13:21:11 PST
Created
attachment 179789
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2012-12-17 13:23:55 PST
Committed <
http://trac.webkit.org/r137933
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug