        <rdar://problem/12895354> NetworkProcess should not exit after downloading         https://bugs.webkit.org/show_bug.cgi?id=105209

Reviewed by Anders Carlsson.

        * NetworkProcess/NetworkProcess.cpp:
        (WebKit::NetworkProcess::shouldTerminate): This process should never voluntarily
        terminate, because it keeps session auth and cookies.



Canonical link: https://commits.webkit.org/123445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137933 268f45cc-cd09-0410-ab3c-d52691b4dbfc